🕶️🍄 Updated with Glitch

--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -51,7 +51,8 @@
     <button id="event-confirm">Confirm</button>
   </div>
 </div>
-        <div class="life-events-container" id="output-container"><div id="loader-spinner" class="loader" style="display: none;"></div>
+        <div class="life-events-container" id="output-container">
+          <div id="loader-spinner" class="loader" style="display: none;"></div>
             <!-- Life events will be dynamically inserted here -->
         </div>
         <div class="age-button-container">
