--- a/public/style.css
+++ b/public/style.css
@@ -130,7 +130,7 @@ button#startGame:hover {
 
 #game-container {
   color: black;
-  width: 90vw;
+  width: 100vw;
   background-color: #e9ebee;
   border-radius: 10px;
   padding: 20px;
@@ -138,7 +138,7 @@ button#startGame:hover {
   margin-bottom: 70px;
   display: flex;
   flex-direction: column;
-  max-height: 70%;
+  max-height: 80%;
   overflow-y: auto;
 }
 .header {
@@ -286,4 +286,22 @@ button#startGame:hover {
   line-height: 60px;
   cursor: pointer;
 }
- 
+ .loader {
+  border: 5px solid #f3f3f3; /* Light grey */
+  border-top: 5px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 2s linear infinite;
+  position: absolute; /* or fixed, depending on your layout */
+  top: 50%; /* Center the loader */
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: none; /* Hidden by default */
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
